force-app/main/default/objects/BLN_PmtBatchMapper__mdt/BLN_PmtBatchMapper__mdt.object-meta.xml
<CustomObject>
    <description>FOUK- 8111 This metadata is created for Payment Batch Mapper</description>
    <label>Payment Batch Mapper</label>
    <pluralLabel>Payment Batch Mappers</pluralLabel>
</CustomObject>