force-app/main/default/objects/BLN_PmtBatchMapper__mdt/fields/BLN_CenterDigits__c.field-meta.xml
<CustomField>
    <fullName>BLN_CenterDigits__c</fullName>
    <description>FOUK-8111 This field is used to store Center Digits</description>
    <label>Center Digits</label>
    <length>100</length>
    <type>Text</type>
</CustomField>