force-app/main/default/objects/BLN_PmtBatchMapper__mdt/fields/BLN_MethodId__c.field-meta.xml
<CustomField>
    <fullName>BLN_MethodId__c</fullName>
    <description>FOUK-8111 This field is created to store Method Id</description>
    <label>Method Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>