force-app/main/default/objects/BLN_PmtBatchMapper__mdt/fields/BLN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentType__c</fullName>
    <description>FOUK-8111 This field is created for Payment Type</description>
    <label>Payment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>