force-app/main/default/objects/BLN_PmtBatchMapper__mdt/fields/BLN_Prefix__c.field-meta.xml
<CustomField>
    <fullName>BLN_Prefix__c</fullName>
    <description>FOUK-8111 This field is created to store Prefix</description>
    <label>Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>